--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Portfolio</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-        <link href="/css/style.css" type="text/css" rel="stylesheet">
+        <link href="css/style.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
@@ -54,7 +54,7 @@
                             <a class="btn btn-dark mt-5" href="#expertise" role="button">Mon expertise</a>
                         </div>
                         <div class="col-12 col-md-4">
-                            <img src="/src/Kevin_PP.png" alt="Photo de Kevin" class="w-100 rounded img-shadow">
+                            <img src="src/Kevin_PP.png" alt="Photo de Kevin" class="w-100 rounded img-shadow">
                         </div>
                     </div>
                 </div>
