--- a/index.html
+++ b/index.html
@@ -311,9 +311,10 @@
 
 
                                 <!--Modal projet 1-->
-                                <div class="modal fade" id="modalProjet1" tabindex="-1" aria-hidden="true">
+                                <div class="modal fade" id="modalProjet1" tabindex="-1" aria-labelledby="modalProject1Label" aria-hidden="true">
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
+                                            <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
                                             <div class="modal-body">
                                                 <img src="src/Carrousel couverture NIFFF.png" class="img-fluid rounded mb-3" alt="Projet 1 en grand">
                                                 <h5 class="text-center mb-3">NIFFF X UNINE</h5>
@@ -329,7 +330,7 @@
                                                     Par la suite, j'ai rejoins l'équipe qui s'occupait des micro-trottoirs pour participer au tournage et réaliser le montage. 
                                                 </p>
                                                 <div class="d-flex justify-content-center mb-2">
-                                                        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/C9Cxc1jIDzv/" data-instgrm-version="14" style="background: #FFF; border: none; margin: 0 auto;"></blockquote>
+                                                    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/C9Cxc1jIDzv/" data-instgrm-version="14" style="background: #FFF; border: none; margin: 0 auto;"></blockquote>
                                                 </div>
                                                 <h6 class="fw-bold">Résultats</h6>
                                                 <p class="text-justify mb-3">Au total, les quatre Reel ont cumulé aux alentours de 35'000 vues, 350 likes et 50 commentaires, ce qui a ravi l'équipe communication du NIFFF ainsi que l'ensemble du staff et nos professeur-e-s. Nous devions également rendre un document final qui traite de notre parcours pour atteindre notre objectif initial, qui nous a valu la note de 6.
@@ -353,6 +354,7 @@
                                 <div class="modal fade" id="modalProjet2" tabindex="-1" aria-hidden="true">
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
+                                            <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
                                             <div class="modal-body">
                                                 <img src="https://picsum.photos/800/400?random=2" class="img-fluid rounded mb-3" alt="Projet 2 en grand">
                                                 <h5 class="text-center mb-3">Projets 42 Lausanne</h5>
@@ -366,16 +368,12 @@
                                                 
                                                 </p>
                                                 <h6 class="fw-bold"></h6>
-                                                <p class="text-justify mb-3">De mon côté, en plus de participer aux étapes susmentionnées, je me suis premièrement occupé du Reel basé sur la trend "Run Boy Run" sur la musique de Woodkid.
-                                                    Par la suite, j'ai rejoins l'équipe qui s'occupait des micro-trottoirs pour participer au tournage et réaliser le montage. 
-                                                </p>
+                                                <p class="text-justify mb-3"></p>
                                                 <div class="d-flex justify-content-center mb-2">
-                                                        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/C9Cxc1jIDzv/" data-instgrm-version="14" style="background: #FFF; border: none; margin: 0 auto;"></blockquote>
+                                                        <blockquote class="instagram-media" data-instgrm-permalink="" data-instgrm-version="14" style="background: #FFF; border: none; margin: 0 auto;"></blockquote>
                                                 </div>
                                                 <h6 class="fw-bold">Résultats</h6>
-                                                <p class="text-justify mb-3">Au total, les quatre Reel ont cumulé aux alentours de 35'000 vues, 350 likes et 50 commentaires, ce qui a ravi l'équipe communication du NIFFF ainsi que l'ensemble du staff et nos professeur-e-s. Nous devions également rendre un document final qui traite de notre parcours pour atteindre notre objectif initial, qui nous a valu la note de 6.
-                                                    Enfin, l'accomplissement de notre travail s'est également soldé par un article sur la RTS, ce qui nous a énormément gratifié pour notre travail accompli.
-                                                </p>
+                                                <p class="text-justify mb-3"></p>
                                                 <div class="ratio ratio-16x9">
                                                 <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo du projet" allowfullscreen></iframe>
                                                 </div>
@@ -388,6 +386,7 @@
                                 <div class="modal fade" id="modalProjet3" tabindex="-1" aria-hidden="true">
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
+                                            <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
                                             <div class="modal-body">
                                                 <img src="https://picsum.photos/800/400?random=3" class="img-fluid rounded mb-3" alt="Projet 3 en grand">
                                                 <h5>Titre détaillé du projet 3</h5>
@@ -404,6 +403,7 @@
                                 <div class="modal fade" id="modalProjet4" tabindex="-1" aria-hidden="true">
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
+                                            <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
                                             <div class="modal-body">
                                                 <img src="https://picsum.photos/800/400?random=4" class="img-fluid rounded mb-3" alt="Projet 4 en grand">
                                                 <h5>Titre détaillé du projet 4</h5>
@@ -435,7 +435,7 @@
                     <h3 class="fw-lighter fw-md-light">Contactez-moi sans attendre.</h3>
 
                     <div class="row gy-4 mt-5">
-                        <div class="col-12 col-md-5">
+                        <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
                             <img src="src/contact_me.png" alt="Contactez-moi" width="85%">
                         </div>
                         <div class="col-12 offset-md-1 col-md-6">
