Amélioration carrousel et suite écriture

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -18,3 +18,29 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 	</body>
 </html>
+
+												<div class="row gx-5 mb-3">
+                                                    <div class="col-12 col-lg-6">
+                                                        <h6 class="fw-bold">Visite 42 Network</h6>
+                                                        <p class="text-justify">Premièrement, un court Reel, avec une musique trendy à ce moment-là, lorsqu'une équipe de 42 Network (entité au dessus de toutes les écoles 42) est venue visiter le campus. L'idée était de marquer le coup en filmant quelques plans et en résumant les événements qui ont eu lieu lorsqu'ils étaient présents à Lausanne.<br><br>
+                                                    Cette vidéo est actuellement celle qui a le mieux performé sur le compte Instagram de 42 Lausanne, cumulant ainsi 7300 vues. 
+                                                        </p>
+                                                    </div>
+                                                    <div class="d-none d-lg-block col-lg-1"></div>
+                                                    <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-end">
+                                                        <blockquote class="instagram-media insta-small" data-instgrm-permalink="https://www.instagram.com/p/DAEAHnloO3O/" data-instgrm-version="14" style="background: #FFF; border: none; margin: 0 auto;"></blockquote>
+                                                    </div>
+                                                </div>
+                                                <div class="row gx-5 mb-3">
+                                                    <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-start">
+                                                        <blockquote class="instagram-media insta-small" data-instgrm-permalink="https://www.instagram.com/p/DJW7YhYIWSW/" data-instgrm-version="14" style="background: #FFF; border: none; margin: 0 auto;"></blockquote>
+                                                    </div>
+                                                    <div class="d-none d-lg-block col-lg-1"></div>
+                                                    <div class="col-12 col-lg-6">
+                                                        <h6 class="fw-bold">À la rencontre des piscineuses et piscineux</h6>
+                                                        <p class="text-justify mb-3">Deuxièmement, un Reel micro-trottoir sur les étudiant-e-s de 2024 qui faisaient leur piscine (mois d'examen d'entrée) et qui a servi pour promouvoir la pisicne de 2025.
+                                                            Son but est d'avoir l'avis des étudiant-e-s qui terminaient leur piscine de 2024 pour susciter de l'intérêt, ou même pousser les personnes qui se posent des questions à s'inscrire.<br><br>
+                                                            Ce Reel m'a concrètement permis d'explorer de nouvelles manières de monter, en particulier avec les transitions (lors de l'introduction et entre les personnes et les questions). J'ai pu enrichir mes connaissances de Premiere Pro en utilisant un pluggin et améliorer la qualité de mes productions.                                   
+                                                        </p>
+                                                    </div>
+                                                </div>
