--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="100%">
-                                            <div class="progress-bar w-100 fw-bold bg-black" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>                                          
+                                            <div class="progress-bar w-100 fw-bold bg-black" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            </div>
+                                        </div>                                        
                                    </div>
                                 </div>                               
                             </div>
@@ -259,19 +260,19 @@
                                 <div class="carousel-inner">
 
                                 <!--Slide 1-->
-                                    <div class="carousel-item active" data-bs-interval="2500">
+                                    <div class="carousel-item active" data-bs-interval="4500">
                                         <div class="card text-center border-0 shadow-sm">
                                             <img src="src/Carrousel couverture NIFFF.png" class="card-img" alt="NIFFF X UNINE">
                                             <div class="card-body bg-light">
                                                 <h5 class="card-title">NIFFF X UNINE</h5>
-                                                <p class="card-text">Un projet réalisé dans le cadre d'un cours à l'UniNE en collaboration avec le NIFFF.</p>
+                                                <p class="card-text">Projet réalisé dans le cadre d'un cours à l'UniNE en collaboration avec le NIFFF.</p>
                                                 <button type="button" class="btn btn-dark mx-auto" data-bs-toggle="modal" data-bs-target="#modalProjet1">En savoir plus</button>
                                             </div>
                                         </div>
                                     </div>
 
                                 <!--Slide 2-->
-                                    <div class="carousel-item" data-bs-interval="2500">
+                                    <div class="carousel-item" data-bs-interval="4500">
                                         <div class="card text-center border-0 shadow-sm">
                                             <img src="src/Carrousel_42_Lausanne.jpg" class="card-img" alt="42 Lausanne">
                                             <div class="card-body bg-light">
@@ -283,24 +284,24 @@
                                     </div>
                                     
                                 <!--Slide 3-->    
-                                    <div class="carousel-item" data-bs-interval="2500">
+                                    <div class="carousel-item" data-bs-interval="4500">
                                         <div class="card text-center border-0 shadow-sm">
                                             <img src="src/Carrousel_Ancolie.png" class="card-img" alt="Ancolie Tattoo">
                                             <div class="card-body bg-light">
                                                 <h5 class="card-title">Portrait vidéo : Ancolie Tattoo</h5>
-                                                <p class="card-text">Une vidéo pour un cours à l'UniNE, présentant le métier de tattoo artist.</p>
+                                                <p class="card-text">Vidéo pour un cours à l'UniNE, présentant le métier de tattoo artist.</p>
                                                 <button type="button" class="btn btn-dark mx-auto" data-bs-toggle="modal" data-bs-target="#modalProjet3">En savoir plus</button>
                                             </div>
                                         </div>
                                     </div>
 
                                     <!--Slide 4-->    
-                                    <div class="carousel-item" data-bs-interval="2500">
+                                    <div class="carousel-item" data-bs-interval="4500">
                                         <div class="card text-center border-0 shadow-sm">
                                             <img src="src/Carrousel_Infirmier-ère-s.png" class="card-img" alt="Campagne infirmier-ère-s">
                                             <div class="card-body bg-light">
                                                 <h5 class="card-title">Campagne infirmières et infirmiers précaires</h5>
-                                                <p class="card-text">Un projet de groupe fictif.</p>
+                                                <p class="card-text">Projet de groupe fictif réalisé à l'UniNE.</p>
                                                 <button type="button" class="btn btn-dark mx-auto" data-bs-toggle="modal" data-bs-target="#modalProjet4">En savoir plus</button>
                                             </div>
                                         </div>
