--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 		<title>Portfolio</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <link href="css/style.css" type="text/css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <meta http-equiv="Content-Security-Policy" content="
             default-src 'self';
             script-src 'self' https://www.instagram.com https://static.cdninstagram.com https://unpkg.com https://cdn.jsdelivr.net 'unsafe-inline' 'unsafe-eval';
@@ -53,7 +52,7 @@
         </header>   
 
         <main>
-            <section class="py-5" data-aos="fade-up">
+            <section class="py-5">
                 <div class="container">
                     <div class="row align-items-center gy-4 gy-md-0" id="presentation">
                         <div class="col-12 col-md-8">
@@ -69,11 +68,11 @@
             </section>
             <section class="py-5 bg-light">
                 <div class="container">
-                    <h2 class="fw-normal Text2 mb-2" id="expertise" data-aos="fade-up">Mon expertise</h2>
-                    <h3 class="fw-light" data-aos="fade-up">Communication et création de contenus</h3>
+                    <h2 class="fw-normal Text2 mb-2">Mon expertise</h2>
+                    <h3 class="fw-light">Communication et création de contenus</h3>
                     
                     <!-- Communication -->
-                    <div class="row gy-4 mt-4 align-items-center" data-aos="fade-up">
+                    <div class="row gy-4 mt-4 align-items-center">
                         <div class="col-12 col-md-7">
 
                             <!--Progressbar-->
@@ -164,7 +163,7 @@
                     </div>
 
                     <!-- Création de contenu -->
-                    <div class="row gy-4 mt-5 align-items-center" data-aos="fade-up">
+                    <div class="row gy-4 mt-5 align-items-center">
                         <div class="col-12 col-md-4">
                             <img src="src/montage.jpg" class="rounded img-shadow" alt="Création de contenu" width="100%">
                         </div>
@@ -259,8 +258,8 @@
 
             <section class="py-5">
                 <div class="container">
-                    <h2 class="fw-normal Text2 mb-3" id="portfolio" data-aos="fade-up">Mon portfolio</h2>
-                    <h3 class="fw-lighter fw-md-light mb-5" data-aos="fade-up">Projets académiques et professionnels</h3>
+                    <h2 class="fw-normal Text2 mb-3" id="portfolio">Mon portfolio</h2>
+                    <h3 class="fw-lighter fw-md-light mb-5">Projets académiques et professionnels</h3>
 
                     <!--Carousel réduit-->
                         <div class="mx-auto img-shadow carousel" style="max-width: 600px;">
@@ -324,7 +323,7 @@
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
                                             <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
-                                            <div class="modal-body">
+                                            <div class="modal-body" data-modal-id="modal1">
                                                 <img src="src/Carrousel couverture NIFFF.png" class="img-fluid rounded mb-3" alt="NIFFF X UNINE">
                                                 <h5 class="text-center mb-3">NIFFF X UNINE</h5>
                                                 <p class="mx-auto w-75 mb-5">Ces quatre vidéos ont été réalisées dans le cadre d'un projet en collaboration avec le NIFFF pour le cours <em>Projet en MA3CIG</em> à l'Université de Neuchâtel.</p>
@@ -368,7 +367,7 @@
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
                                             <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
-                                            <div class="modal-body">
+                                            <div class="modal-body" data-modal-id="modal2">
                                                 <img src="src/Carrousel_42_Lausanne.jpg" class="img-fluid rounded mb-3" alt="42 Lausanne">
                                                 <h5 class="text-center mb-3">Projets 42 Lausanne</h5>
                                                 <p class="mx-auto w-75 mb-5 text-justify">Ce stage m'a permis de développer plusieurs compétences : photographie, vidéographie, conceptualisation et production de publications, conduite d'entretiens pour micro-trottoir ou podcast, ainsi que gestion de projet. 
@@ -417,7 +416,7 @@
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
                                             <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
-                                            <div class="modal-body">
+                                            <div class="modal-body" data-modal-id="modal3">
                                                 <img src="src/Carrousel_Ancolie.png" class="img-fluid rounded mb-3" alt="Ancolie Tattoo">
                                                 <h5 class="text-center mb-3">Portrait vidéo : Ancolie Tattoo</h5>
                                                  <p class="mx-auto w-75 mb-5 text-justify">Projet réalisé dans le cadre du cours <em>Compétences son et vidéo</em> à l'Université de Neuchâtel.</p>
@@ -446,7 +445,7 @@
                                     <div class="modal-dialog modal-lg modal-dialog-centered">
                                         <div class="modal-content">
                                             <button type="button" class="btn-close position-absolute top-0 end-0 m-3 z-3" data-bs-dismiss="modal" aria-label="Fermer"></button>
-                                            <div class="modal-body">
+                                            <div class="modal-body" data-modal-id="modal4">
                                                 <img src="src/Carrousel_Infirmier-ère-s.png" class="img-fluid rounded mb-3" alt="Campagne infirmier-ère-s">
                                                 <h5 class="text-center mb-3">Campagne infirmières et infirmiers précaires</h5>
                                                 <p class="mx-auto w-75 mb-5 text-justify">Projet fictif réalisé en groupe dans le cadre du cours <em>Narration et Storytelling</em> à l'Université de Neuchâtel.</p>
@@ -487,10 +486,10 @@
             </section>
             <section class="py-5 bg-light">
                 <div class="container">
-                    <h2 class="fw-normal" id="contact" data-aos="fade-up">Envie d'en savoir plus ?</h2>
-                    <h3 class="fw-lighter fw-md-light" data-aos="fade-up">Contactez-moi sans attendre.</h3>
+                    <h2 class="fw-normal" id="contact">Envie d'en savoir plus ?</h2>
+                    <h3 class="fw-lighter fw-md-light">Contactez-moi sans attendre.</h3>
 
-                    <div class="row gy-4 mt-5" data-aos="fade-up">
+                    <div class="row gy-4 mt-5">
                         <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
                             <img src="src/contact_me.png" alt="Contactez-moi" width="85%">
                         </div>
@@ -548,7 +547,6 @@
             </div>
 
             <script async id="instagram-script" src="https://www.instagram.com/embed.js"></script>
-            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
             <!-- Script java script-->
 	        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
             <script src="./js/script.js"></script>
