--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <meta http-equiv="Content-Security-Policy" content="
             default-src 'self';
             script-src 'self' https://www.instagram.com https://static.cdninstagram.com https://unpkg.com https://cdn.jsdelivr.net 'unsafe-inline' 'unsafe-eval';
@@ -54,13 +55,13 @@
         <main>
             <section class="py-5">
                 <div class="container">
-                    <div class="row align-items-center gy-4 gy-md-0" id="presentation">
+                    <div class="row align-items-center gy-4 gy-md-0 animate__animated" id="presentation">
                         <div class="col-12 col-md-8">
-                            <h1 class="fw-bold">Je suis Kevin Costa Poças<br>Spécialiste en communication</h1>
-                            <h2 class="fw-light">Bienvenue sur mon portfolio</h2>
-                            <a class="btn btn-dark mt-5" href="#expertise" role="button">Mon expertise</a>
+                            <h1 class="fw-bold animate__animated animate-on-scroll">Je suis Kevin Costa Poças<br>Spécialiste en communication</h1>
+                            <h2 class="fw-light animate__animated animate-on-scroll">Bienvenue sur mon portfolio</h2>
+                            <a class="btn btn-dark mt-5 animate__animated animate-on-scroll" href="#expertise" role="button">Mon expertise</a>
                         </div>
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-4 animate__animated animate-on-scroll">
                             <img src="src/Kevin_PP.png" alt="Photo de Kevin" class="w-100 rounded img-shadow">
                         </div>
                     </div>
@@ -68,11 +69,11 @@
             </section>
             <section class="py-5 bg-light">
                 <div class="container">
-                    <h2 class="fw-normal Text2 mb-2">Mon expertise</h2>
-                    <h3 class="fw-light">Communication et création de contenus</h3>
+                    <h2 class="fw-normal Text2 mb-2 animate__animated animate-on-scroll" id="expertise">Mon expertise</h2>
+                    <h3 class="fw-light animate__animated animate-on-scroll">Communication et création de contenus</h3>
                     
                     <!-- Communication -->
-                    <div class="row gy-4 mt-4 align-items-center">
+                    <div class="row gy-4 mt-4 align-items-center animate__animated animate-on-scroll">
                         <div class="col-12 col-md-7">
 
                             <!--Progressbar-->
@@ -86,7 +87,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="75%">
-                                            <div class="progress-bar w-75 fw-bold bg-black" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" data-final-width="75"></div>
                                         </div>                                          
                                    </div>
                                 </div>                               
@@ -102,7 +103,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="75%">
-                                            <div class="progress-bar w-75 fw-bold bg-black" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" data-final-width="75"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -118,7 +119,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="50%">
-                                            <div class="progress-bar w-50 fw-bold bg-black" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" data-final-width="50"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -134,7 +135,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="50%">
-                                            <div class="progress-bar w-50 fw-bold bg-black" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" data-final-width="50"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -150,7 +151,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="100%">
-                                            <div class="progress-bar w-100 fw-bold bg-black" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" data-final-width="100"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -163,7 +164,7 @@
                     </div>
 
                     <!-- Création de contenu -->
-                    <div class="row gy-4 mt-5 align-items-center">
+                    <div class="row gy-4 mt-5 align-items-center animate__animated animate-on-scroll">
                         <div class="col-12 col-md-4">
                             <img src="src/montage.jpg" class="rounded img-shadow" alt="Création de contenu" width="100%">
                         </div>
@@ -180,7 +181,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="100%">
-                                            <div class="progress-bar w-100 fw-bold bg-black" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" data-final-width="100"></div>
                                         </div>                                          
                                    </div>
                                 </div>                               
@@ -196,7 +197,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="75%">
-                                            <div class="progress-bar w-75 fw-bold bg-black" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" data-final-width="75"></div>
                                         </div>                                          
                                    </div>
                                 </div>                               
@@ -212,7 +213,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="50%">
-                                            <div class="progress-bar w-50 fw-bold bg-black" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" data-final-width="50"></div>
                                         </div>                                          
                                    </div>
                                 </div>                               
@@ -228,7 +229,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="100%">
-                                            <div class="progress-bar w-100 fw-bold bg-black" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" data-final-width="100">
                                             </div>
                                         </div>                                        
                                    </div>
@@ -245,7 +246,7 @@
                                     </div>
                                     <div class="col">
                                         <div class="progress" data-bs-toggle="tooltip" title="50%">
-                                            <div class="progress-bar w-50 fw-bold bg-black" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar fw-bold bg-black" role="progressbar" style="width: 0%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" data-final-width="50"></div>
                                         </div>                                          
                                    </div>
                                 </div>                               
@@ -258,11 +259,11 @@
 
             <section class="py-5">
                 <div class="container">
-                    <h2 class="fw-normal Text2 mb-3" id="portfolio">Mon portfolio</h2>
-                    <h3 class="fw-lighter fw-md-light mb-5">Projets académiques et professionnels</h3>
+                    <h2 class="fw-normal Text2 mb-3 animate__animated animate-on-scroll" id="portfolio">Mon portfolio</h2>
+                    <h3 class="fw-lighter fw-md-light mb-5 animate__animated animate-on-scroll">Projets académiques et professionnels</h3>
 
                     <!--Carousel réduit-->
-                        <div class="mx-auto img-shadow carousel" style="max-width: 600px;">
+                        <div class="mx-auto img-shadow carousel animate__animated animate-on-scroll" style="max-width: 600px;">
                             <div id="carouselPortfolio" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
 
@@ -486,10 +487,10 @@
             </section>
             <section class="py-5 bg-light">
                 <div class="container">
-                    <h2 class="fw-normal" id="contact">Envie d'en savoir plus ?</h2>
-                    <h3 class="fw-lighter fw-md-light">Contactez-moi sans attendre.</h3>
+                    <h2 class="fw-normal animate__animated animate-on-scroll" id="contact">Envie d'en savoir plus ?</h2>
+                    <h3 class="fw-lighter fw-md-light animate__animated animate-on-scroll">Contactez-moi sans attendre.</h3>
 
-                    <div class="row gy-4 mt-5">
+                    <div class="row gy-4 mt-5 animate__animated animate-on-scroll">
                         <div class="col-12 col-md-5 d-flex align-items-center justify-content-center">
                             <img src="src/contact_me.png" alt="Contactez-moi" width="85%">
                         </div>
