test animations mobile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <main>
             <section class="py-5">
                 <div class="container">
-                    <div class="row align-items-center gy-4 gy-md-0 animate__animated" id="presentation">
+                    <div class="row align-items-center gy-4 gy-md-0" id="presentation">
                         <div class="col-12 col-md-8">
                             <h1 class="fw-bold animate__animated animate-on-scroll">Je suis Kevin Costa Poças</h1>
                             <h1 class="fw-bold animate__animated animate-on-scroll">Spécialiste en communication</h1>
